Fixed layout bug.

--- a/frontend/app/framework/angular/forms/editors/tag-editor.component.scss
+++ b/frontend/app/framework/angular/forms/editors/tag-editor.component.scss
@@ -167,7 +167,7 @@ div {
 }
 
 .suggestions-dropdown {
-    max-width: 300px;
-    min-width: 300px;
+    max-width: 420px;
+    min-width: 420px;
     padding: 1rem;
 }
